Bug 1571513 - Setup PrincipalHandle and Playing listener of a DecodedStream in the start. r=alwu

`mPrincipalHandle` and `mPlaying` listeners were being connected in the ctor of a DecodedStream. However, this is not necessary because their attributes will only be modified after the sink start. In addition to that, it was causing problems if a sink was replaced before being started or stopped (and shutdown). This is a valid scenario, though, that we need to support.

Differential Revision: https://phabricator.services.mozilla.com/D63830